convert more tweets

--- a/src/content/posts/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/content/posts/just-enough-functional-programming-course-launch/index.mdx
@@ -17,6 +17,8 @@ relatedPostsSlugs:
 relevantCourseNickname: 'fp'
 ---
 
+import SocialPost from '../../../components/SocialPost.astro'
+
 In 2017, I came across [The Mostly Adequate Guide to Functional Programming](https://github.com/MostlyAdequate/mostly-adequate-guide) by [Brian Lonsdorf](https://twitter.com/drboolean). It's an incredible resource and introduction to functional programming in JavaScript. It inspired me to start giving talks about functional programming in 2018. After giving the talk several times, I decided to make a course to go along with it. That course is available to you now on [egghead.io](https://egghead.io/course/just-enough-functional-programming-in-javascript/?af=8u8eik).
 
 The course is called [Just Enough Functional Programming in JavaScript](https://egghead.io/course/just-enough-functional-programming-in-javascript/?af=8u8eik) and I think you'll like it.
@@ -37,21 +39,16 @@ Here's what you'll learn in the course:
 
 In just 30 minutes, you'll learn more than "just enough".
 
-<blockquote class="twitter-tweet" data-lang="en">
-  <p lang="en" dir="ltr">
-    Alright, who of you is excited to learn &quot;just enough&quot; functional
-    programming this weekend? I teach you an almost jargon-less introduction to
-    FP to whet your appetite. Enjoy on{' '}
-    <a href="https://twitter.com/eggheadio?ref_src=twsrc%5Etfw">@eggheadio</a>!{' '}
-    <a href="https://t.co/PfdODXviOG">https://t.co/PfdODXviOG</a>
-  </p>
-  &mdash; Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/1109158892469010432?ref_src=twsrc%5Etfw">March 22, 2019</a>
-</blockquote>
-<script
-  async
-  src="https://platform.twitter.com/widgets.js"
-  charset="utf-8"
-></script>
+<SocialPost
+  authorName="Kyle Shevlin"
+  authorHandle="@kyleshevl.in"
+  authorProfile="https://bsky.app/profile/kyleshevl.in"
+  avatarUrl="/images/kyle-headshot.jpg"
+  date="2019-03-22"
+  content={`
+Alright, who of you is excited to learn "just enough" functional programming this weekend? I teach you an almost jargon-less introduction to FP to whet your appetite.
+`}
+/>
 
 Here's the course intro video. Give it a watch!
 
