--- a/src/content/posts/what-is-most-important-to-a-web-developer/index.mdx
+++ b/src/content/posts/what-is-most-important-to-a-web-developer/index.mdx
@@ -7,20 +7,18 @@ description: 'I recently asked developers what was most important to them. The r
 tags: ['Career']
 ---
 
+import SocialPost from '../../../components/SocialPost.astro'
+
 Recently, I ran a poll on Twitter asking web developers what was most important to them. Here's a look at the results.
 
-<blockquote class="twitter-tweet" data-lang="en">
-  <p lang="en" dir="ltr">
-    What's more important to you as a web developer?{' '}
-    <a href="https://twitter.com/hashtag/webdevelopment?src=hash">
-      #webdevelopment
-    </a>{' '}
-    <a href="https://twitter.com/hashtag/webdev?src=hash">#webdev</a>{' '}
-    <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a>
-  </p>
-  — Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/834529080162738177">February 22, 2017</a>
-</blockquote>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<SocialPost
+  authorName="Kyle Shevlin"
+  authorHandle="@kyleshevl.in"
+  authorProfile="https://bsky.app/profile/kyleshevl.in"
+  avatarUrl="/images/kyle-headshot.jpg"
+  date="2017-02-22"
+  content="What's more important to you as a web developer?"
+/>
 
 Over 50% of the voters said the people they work with is most important to them, followed by the product they work on, and lastly, followed by the tech they use at work. No one replied with an "other", even though a couple people voted for it.
 
