remainder of tweets converted

--- a/src/content/archived/i-started-a-podcast/index.mdx
+++ b/src/content/archived/i-started-a-podcast/index.mdx
@@ -7,11 +7,18 @@ title: 'I Started a Podcast'
 relatedPostsSlugs: ['the-future-of-second-career-devs']
 ---
 
+import SocialPost from '../../../components/SocialPost.astro'
+
 Back in September, I tweeted:
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Friends, help me out. I'm starting a podcast called "Second Career Devs". Who are some great second career devs/engs I should interview?</p>— Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/906201169495605248?ref_src=twsrc%5Etfw">September 8, 2017</a></blockquote>
-
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<SocialPost
+  authorName="Kyle Shevlin"
+  authorHandle="@kyleshevl.in"
+  authorProfile="https://bsky.app/profile/kyleshevl.in"
+  avatarUrl="/images/kyle-headshot.jpg"
+  date="2017-09-08"
+  content={`Friends, help me out. I'm starting a podcast called "Second Career Devs". Who are some great second career devs/engs I should interview?`}
+/>
 
 I'm proud to say that I finally was able to launch the podcast. I welcome you to follow Second Career Devs on [iTunes](https://itunes.apple.com/us/podcast/second-career-devs/id1317467797?mt=2) and subscribe.
 
