update related posts

--- a/src/content/posts/my-git-workflow-for-refactoring/index.mdx
+++ b/src/content/posts/my-git-workflow-for-refactoring/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'Refactoring is a key part of my development process. Let me show you the <code>git</code> workflow I use to make refactoring just another step in building features or other code changes.'
 excerpt: null
 tags: ['Git', 'Software Engineering', 'Productivity']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['refactor-is-not-a-scary-word']
 ---
 
 import Image from '../../../components/Image.astro'
