--- a/src/content/posts/refactor-is-not-a-scary-word/index.mdx
+++ b/src/content/posts/refactor-is-not-a-scary-word/index.mdx
@@ -7,7 +7,7 @@ description: 'At some point, &ldquo;refactor&rdquo; became a scary word, strikin
 without developing an ability to refactor code effectively.'
 excerpt: null
 tags: ['Refactoring', 'Software Engineering', 'Thoughts']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['my-git-workflow-for-refactoring']
 ---
 
 One thing I've struggled with throughout my life is using a word with a specific definition that gets interpreted differently. It causes me a great deal of frustration. <Marker content={`In my childhood, I read the book "The Giver" by Lois Lowry. At one point, the main character makes an exaggerated statement, to which the parents admonish him with, "Precision of language!" I felt understood when I read that.`} /> It might be unreasonable to expect people to walk around with a Merriam-Webster's dictionary in their pocket, <Marker content="Actually, I can. 📱" /> so mistakes are bound to happen.
