--- a/src/content/posts/refactor-is-not-a-scary-word/index.mdx
+++ b/src/content/posts/refactor-is-not-a-scary-word/index.mdx
@@ -149,7 +149,7 @@ describe('getTicketPrice', () => {
 })
 ```
 
-Are tests are still green with that change. I won't share a picture, it's exactly the same as before.
+Our tests are still green with that change. I won't share a picture, it's exactly the same as before.
 
 That said, I think we're at a place we can add our new feature. Given the nature of this function, we can write the additional test first, then get it passing:
 
