add prefer gaps to margins

--- a/src/content/posts/no-outer-margin-or-padding/index.mdx
+++ b/src/content/posts/no-outer-margin-or-padding/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: "It is an anti-pattern to add margin to the outermost element of a component. It breaks encapsulation and makes components difficult to reuse. Let's learn what to do instead."
 excerpt: null
 tags: ['React', 'CSS', 'Reusability', 'Anti-patterns']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['prefer-gaps-to-margins']
 ---
 
 Building reusable components can be challenging to do well, and there are some anti-patterns that are easy to fall into that can make it even more difficult.
