create prefer tag

--- a/src/content/posts/prefer-alphabetized-object-keys/index.mdx
+++ b/src/content/posts/prefer-alphabetized-object-keys/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Alphabetized Object Keys'
 subtitle: null
 description: "Small efforts can add up to big gains, given enough time. That's how I feel about alphabetizing my object keys. By always sorting them, I increase the speed at which I can read, and even write, code."
 excerpt: null
-tags: ['JavaScript', 'TypeScript', 'React']
+tags: ['JavaScript', 'TypeScript', 'React', 'Prefer']
 relatedPostsSlugs: []
 ---
 
