--- a/src/content/posts/prefer-composition/index.mdx
+++ b/src/content/posts/prefer-composition/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Multiple Compositions'
 subtitle: 'aka Prefer Understandability and Maintainability Over Absolute DRYness'
 description: "The flexibility of JavaScript and React means there are lots of ways to achieve the same result. Let's consider why we might choose one way over another when it comes to React. Specifically, when to choose a more verbose solution with composition over the DRYest code possible."
 excerpt: null
-tags: ['React', 'JavaScript', 'TypeScript', 'Refactoring']
+tags: ['React', 'JavaScript', 'TypeScript', 'Refactoring', 'Prefer']
 relatedPostsSlugs:
   [
     'responsive-design-and-composition',
