--- a/src/content/posts/prefer-declarative-state-handlers/index.mdx
+++ b/src/content/posts/prefer-declarative-state-handlers/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Declarative State Updaters'
 subtitle: "or Don't Pass Around Naked State Setters, Please"
 description: "Learn how declarative state updaters improve the quality of your component's code."
 excerpt: "Since the advent of React hooks, I have seen a pattern emerge that I think is <em>less than ideal</em>. I've started calling it the &ldquo;naked state setter&rdquo; pattern. Let's find out what it is and how to avoid it."
-tags: ['React']
+tags: ['React', 'Prefer']
 relatedPostsSlugs:
   [
     'prefer-function-updaters-in-state-setters',
