--- a/src/content/posts/prefer-explicit-maps/index.mdx
+++ b/src/content/posts/prefer-explicit-maps/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Explicit Maps'
 subtitle: null
 description: "Sometimes we write unnecessary complexity without realizing it. Let's see how we often do this with ternaries and learn how using a map will remove complexity and improve maintainability."
 excerpt: null
-tags: ['TypeScript', 'JavaScript']
+tags: ['TypeScript', 'JavaScript', 'Prefer']
 relatedPostsSlugs:
   ['enumerate-dont-booleanate', 'managing-cyclomatic-complexity']
 ---
