--- a/src/content/posts/prefer-gaps-to-margins/index.mdx
+++ b/src/content/posts/prefer-gaps-to-margins/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Gaps To Margins'
 subtitle: null
 description: 'Prefer using gaps to margins when it comes to your component layouts.'
 excerpt: 'I often try and say things with a little more nuance than this, but I think using gaps is superior to margins in pretty much every single way. You should be using them more in your apps than you are.'
-tags: ['Frontend', 'Design Systems', 'CSS']
+tags: ['Frontend', 'Design Systems', 'CSS', 'Prefer']
 relatedPostsSlugs: ['no-outer-margin']
 ---
 
