--- a/src/content/posts/prefer-noun-adjective-naming/index.mdx
+++ b/src/content/posts/prefer-noun-adjective-naming/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Noun-Adjective Naming'
 subtitle: null
 description: 'English grammar puts the adjective before the noun, but when it comes to file or function naming, I think you should do the opposite.'
 excerpt: null
-tags: ['React', 'JavaScript', 'TypeScript']
+tags: ['React', 'JavaScript', 'TypeScript', 'Prefer']
 relatedPostsSlugs: []
 ---
 
