--- a/src/content/posts/prefer-function-updaters-in-state-setters/index.mdx
+++ b/src/content/posts/prefer-function-updaters-in-state-setters/index.mdx
@@ -5,7 +5,7 @@ title: 'Prefer Function Updaters in State Setters'
 subtitle: null
 description: 'React state can be updated in two ways: replace the `currentState` with the `nextState`, or transform the `currentState` to the `nextState` with a function. Prefer the function.'
 excerpt: 'React state can be updated in two ways: replace the <code>currentState</code> with the <code>nextState</code>, or transform the <code>currentState</code> to the <code>nextState</code> with a function. Prefer the function.'
-tags: ['React', 'JavaScript']
+tags: ['React', 'JavaScript', 'Prefer']
 relatedPostsSlugs: ['use-encapsulation', 'prefer-declarative-state-updaters']
 ---
 
