--- a/src/content/posts/nothing-is-something/index.mdx
+++ b/src/content/posts/nothing-is-something/index.mdx
@@ -3,7 +3,7 @@ date: '2025-12-20T00:14:23.800Z'
 slug: 'nothing-is-something'
 title: 'Nothing is Something'
 subtitle: "aka please go watch Metz's talk, I'm begging you"
-description: ''
+description: "If this, do that; else, do nothing. A programmer's story as old as time. But what if doing nothing is actually doing something. And what if our code can get a lot simpler by recognizing that?"
 excerpt: null
 tags: ['JavaScript', 'TypeScript']
 relatedPostsSlugs: []
